[package]
name = "cloudflare-dns-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json","blocking"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
error-chain = "0.12.4"
serde_json = "1.0.134"
clap = { version = "4.5.23", features = ["derive"] }
